# recruiting-rank-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  config.yaml  docker-compose.yml  models.py  pyproject.toml  rank.py  requirements.txt  serve.py  submission_metadata.yaml  validate_submission.py
.github/workflows/: ci.yml
config/: __init__.py  data.py
data/: ranker_model.pkl
features/: extractor.py
scoring/: explainer.py  jd_parser.py  ranker.py  skill_graph.py
scripts/: pool_review.py
tests/: conftest.py  test_explainer.py  test_extractor.py  test_integration.py  test_models.py  test_nlp_utils.py  test_oracle_ranking.py  test_rank_embeddings.py  test_rank_encoding.py  test_ranker.py  test_serve.py  test_skill_graph.py
utils/: nlp_utils.py
